<resources>
    <string name="app_name">Books &amp; Hobbies</string>
    <string name="booksandhobbies">Books and Hobbies</string>
    <string name="timespent">Time Spent</string>
    <string name="addminutes"><u>Add minutes</u></string>
    <string name="thingstodo">Things to do</string>
    <string name="thingsdone">Things done</string>
    <string name="pagsread">Pages Read</string>
    <string name="progress">Progress Made</string>
    <string name="addahobby">Add a Hobby</string>
    <string name="ok">Ok</string>
    <string name="yournote">Your Note</string>
    <string name="cancel">Cancel</string>
    <string name="hobbyname">name of hobby</string>
    <string name="bookname">name of book</string>
    <string name="addabook">Add a Book</string>
    <string name="numofpages">number of pages</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="record">Record</string>
    <string name="numminhobby">Number of minutes recorded for hobby: </string>
    <string name="numminbook">Number of minutes recorded for book: </string>
    <string name="timerrec">Timer/Recorder</string>
    <string name="addanote">Add a Note</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="addtime">Customly Add Minutes</string>
    <string name="time">minutes</string>
    <string name="addnotes">Add Notes</string>
    <string name="customlyaddpages">Customly Add Pages</string>
    <string name="pagesread">number of pages read</string>
    <string name="editdeletebook">Edit/Delete Book</string>
    <string name="editdeletehobby">Edit/Delete Hobby</string>
    <string name="editdeletenote">Edit/Delete Note</string>
    <string name="asktodelete">Are you sure you want to delete this note?</string>
    <string name="delete">delete</string>
    <string name="edit">EDIT</string>
    <string name="setpage">pages read so far</string>
    <string name="note">note</string>
    <string name="areyousuredeldone">Are you sure you want to delete this note?</string>
    <string name="deletenote">Delete Note</string>
    <string name="edittime">Set/Reset Time Spent</string>
    <string name="editpages">Set/Reset Pages Read</string>
    <string name="settime">set time spent in minutes</string>
    <string name="setpages">set pages read</string>
    <string name="resetpages">reset</string>
    <string name="set">set</string>


</resources>
