<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp" android:layout_height="wrap_content" android:background="@drawable/round2">

    <TextView
        android:text="@string/deletenote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="@color/d99" />

    <Button
        android:text="@string/delete"
        android:layout_height="wrap_content"
        android:id="@+id/doneDeleteButton"
        android:background="@drawable/time_button_round"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_width="280dp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/areyousuredeldone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView6"
        android:textColor="@android:color/black" />

</RelativeLayout>