<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp" android:layout_height="wrap_content" android:background="@drawable/round2">

    <TextView
        android:text="@string/editdeletehobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="@color/d99" />

    <Button
        android:text="@string/delete"
        android:layout_height="wrap_content"
        android:id="@+id/hobbyDeleteButton"
        android:background="@drawable/time_button_round"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_width="280dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/hobbyEditButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:text="@string/edit"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/hobbyEditButton"
        style="@style/Widget.AppCompat.Button"
        android:background="@drawable/edit_button"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_width="280dp"
        android:layout_below="@+id/editHobby"
        android:layout_alignStart="@+id/hobbyDeleteButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="22dp"
        android:id="@+id/editHobby"
        android:textColor="@android:color/black"
        android:textColorHint="?attr/colorButtonNormal"
        android:backgroundTint="@color/d99"
        android:textColorLink="@color/d99"
        android:hint="@string/hobbyname"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />
</RelativeLayout>