<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/round2">

    <TextView
        android:text="@string/addnotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:id="@+id/textView11"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="22sp"
        android:layout_marginLeft="12dp"
        android:textColor="@color/d99" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:id="@+id/addNote"
        android:hint="@string/note"
        android:textColorHint="?attr/colorButtonNormal"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        style="@style/Widget.AppCompat.EditText"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:textColorLink="@color/darkPurple"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/d99"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:inputType="text" />


    <TextView
        android:text="@string/ok"
        android:layout_height="wrap_content"
        android:id="@+id/addNoteOk"
        android:textColor="@color/d99"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_alignBaseline="@+id/addNoteCancel"
        android:layout_alignBottom="@+id/addNoteCancel"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/cancel"
        android:id="@+id/addNoteCancel"
        android:textColor="@color/d99"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/addNote"
        android:layout_alignParentStart="true" />

</RelativeLayout>