<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/round2">

    <TextView
        android:text="@string/addtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:id="@+id/textView1010"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="22sp"
        android:layout_marginLeft="12dp"
        android:textColor="@color/d99" />


    <TextView
        android:text="@string/ok"
        android:layout_height="wrap_content"
        android:id="@+id/addTimeOk"
        android:textColor="@color/d99"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginEnd="34dp"
        android:layout_alignBaseline="@+id/addPagesCancel"
        android:layout_alignBottom="@+id/addPagesCancel"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/addPagesEdit"
        android:hint="@string/time"
        android:textColorHint="?attr/colorButtonNormal"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        style="@style/Widget.AppCompat.EditText"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:textColorLink="@color/d99"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/d99"
        android:layout_below="@+id/textView1010"
        android:layout_alignParentStart="true"
        android:inputType="number" />

    <TextView
        android:text="@string/cancel"
        android:id="@+id/addPagesCancel"
        android:textColor="@color/d99"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="11dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/addPagesEdit"
        android:layout_alignStart="@+id/addPagesEdit" />

</RelativeLayout>